# static-collections

./: Cargo.toml  license.txt  readme.md
.github/workflows/: ci.yml
src/: bitmap.rs  lib.rs  string.rs  vec.rs
src/ffi/: c_str.rs  mod.rs  wstring.rs
